--- a/outputs/model_responses/gpt/gpt-35-turbo/full_continuation_0001_gpt-35-turbo.json
+++ b/outputs/model_responses/gpt/gpt-35-turbo/full_continuation_0001_gpt-35-turbo.json
@@ -1,25 +1,25 @@
 {
-  "id": "chatcmpl-9dC8WriyhRvB0r2xjO6t5BgeHMgAZ",
+  "id": "chatcmpl-9dK5IKK4fJYIwrTPPoMPXdIcBgMcI",
   "choices": [
     {
       "finish_reason": "stop",
       "index": 0,
       "logprobs": null,
       "message": {
-        "content": "{\n  \"judgement\": \"s\u00ed\",\n  \"continuation\": \"Pues se vuelven chinos o no, no s\u00e9;  mientras, bebo de un modo cabal;  el t\u00e9 me gusta con un toque de sal,  el jengibre le da un sabor redondo.\"\n}",
+        "content": "{\n  \"judgement\": \"s\u00ed\",\n  \"continuation\": \"Feliz es quien de ambos saborear\",\n  \"continuation\": \"sabe, la hierba y el t\u00e9: no es venenoso\",\n  \"continuation\": \"el licor su inter\u00e9s de los, tambi\u00e9n gozoso\",\n  \"continuation\": \"y traidores. \u00a1Oh qu\u00e9 poderoso\"\n}",
         "role": "assistant",
         "function_call": null,
         "tool_calls": null
       }
     }
   ],
-  "created": 1719128472,
+  "created": 1719159024,
   "model": "gpt-3.5-turbo-0125",
   "object": "chat.completion",
   "system_fingerprint": null,
   "usage": {
-    "completion_tokens": 66,
+    "completion_tokens": 86,
     "prompt_tokens": 106,
-    "total_tokens": 172
+    "total_tokens": 192
   }
 }
