--- a/outputs/model_responses/gpt/gpt-35-turbo/full_humor_0001_gpt-35-turbo.json
+++ b/outputs/model_responses/gpt/gpt-35-turbo/full_humor_0001_gpt-35-turbo.json
@@ -1,25 +1,69 @@
 {
-  "id": "chatcmpl-9dC8VghlMIGqsQ7o61XszFcSR8bpQ",
+  "id": "chatcmpl-9dK5E6TsWruKW6M6CK0pWb5HvJ4zL",
   "choices": [
     {
       "finish_reason": "stop",
       "index": 0,
       "logprobs": null,
       "message": {
-        "content": "{\n  \"judgement\": \"s\u00ed\",\n  \"reason\": \"El poema es c\u00f3mico porque juega con la mezcla de culturas y elementos chinos y occidentales de una manera absurda y exagerada, creando un tono humor\u00edstico.\"\n}",
+        "content": "{\n  \"judgement\": \"s\u00ed\",\n  \"reason\": \"El poema es c\u00f3mico debido a la exageraci\u00f3n de los nombres chinos y la combinaci\u00f3n de palabras que no tienen relaci\u00f3n directa, como 'Smocking', 'Sk\u00e1ting-R\u00edng' y 'Zeit\u00fang'. Adem\u00e1s, la imagen de un chino bebiendo t\u00e9 con gin-seng y fumando una pipa de Kwant\u00fang agrega un tono humor\u00edstico a la escena. La combinaci\u00f3n de elementos incongruentes y la excentricidad de las situaciones descritas contribuyen a que el poema sea percibido como c\u00f3mico.\"\n}",
+        "role": "assistant",
+        "function_call": null,
+        "tool_calls": null
+      }
+    },
+    {
+      "finish_reason": "stop",
+      "index": 1,
+      "logprobs": null,
+      "message": {
+        "content": "{\n  \"judgement\": \"s\u00ed\",\n  \"reason\": \"El poema es c\u00f3mico debido a la exageraci\u00f3n en la descripci\u00f3n de la preparaci\u00f3n y consumo del t\u00e9 chino, as\u00ed como en la referencia a lugares y elementos asi\u00e1ticos que crean un ambiente humor\u00edstico. Adem\u00e1s, el uso de rimas y juegos de palabras le dan un tono jocoso al poema. La combinaci\u00f3n de elementos tradicionales con situaciones irreverentes contribuye a su naturaleza humor\u00edstica.\"\n}",
+        "role": "assistant",
+        "function_call": null,
+        "tool_calls": null
+      }
+    },
+    {
+      "finish_reason": "stop",
+      "index": 2,
+      "logprobs": null,
+      "message": {
+        "content": "{\n  \"judgement\": \"s\u00ed\",\n  \"reason\": \"El poema es c\u00f3mico porque juega con varios elementos ex\u00f3ticos orientales como el t\u00e9 Houlong, el gin-seng, Weng, Hong-Kong, Armstrong, Tsung-H\u00e1i, T\u00e1i-Yu\u00e9ng, Kwansi, Ning-Kiang, Chung-Ti\u00e9ng, Ning-P\u00f3, Nank\u00edn, Souch\u00f3ng, Smocking, Kwant\u00fang, Sk\u00e1ting-R\u00edng, Zeit\u00fang, King, Yu\u00e9n-S\u00fang, los cuales son utilizados de manera inesperada y divertida en un contexto occidental como el h\u00e1bito de fumar pipa, vestir un Smocking y descansar despu\u00e9s de leer un peri\u00f3dico. Esta combinaci\u00f3n de elementos ex\u00f3ticos y occidentales, junto con el tono l\u00fadico del poema, contribuyen a su car\u00e1cter c\u00f3mico.\"\n}",
+        "role": "assistant",
+        "function_call": null,
+        "tool_calls": null
+      }
+    },
+    {
+      "finish_reason": "stop",
+      "index": 3,
+      "logprobs": null,
+      "message": {
+        "content": "{\n  \"judgement\": \"s\u00ed\",\n  \"reason\": \"Este poema es c\u00f3mico por la combinaci\u00f3n de t\u00e9rminos orientales como el t\u00e9 Houlong, gin-seng, Armstrong, Weng, Hong-Kong y otros, con palabras occidentales como Smocking, Sk\u00e1ting-R\u00edng, Zeit\u00fang y King. Esta mezcla inesperada genera un contraste c\u00f3mico que resulta en un tono humor\u00edstico. Adem\u00e1s, el uso de rimas y una estructura de soneto tradicional para hablar de actividades cotidianas como beber t\u00e9 y fumar pipa tambi\u00e9n contribuye al tono humor\u00edstico de la obra.\"\n}",
+        "role": "assistant",
+        "function_call": null,
+        "tool_calls": null
+      }
+    },
+    {
+      "finish_reason": "stop",
+      "index": 4,
+      "logprobs": null,
+      "message": {
+        "content": "{\n  \"judgement\": \"s\u00ed\",\n  \"reason\": \"S\u00ed, el poema es c\u00f3mico porque juega con la extravagancia y exageraci\u00f3n en la descripci\u00f3n de la bebida y las actividades del poeta. La combinaci\u00f3n de t\u00e9rminos como t\u00e9 Houlong, gin-seng, Smocking, Sk\u00e1ting-R\u00edng, entre otros, en un tono pomposo y humor\u00edstico, crea un efecto c\u00f3mico en el poema. Adem\u00e1s, la exageraci\u00f3n de la importancia de la bebida y las actividades cotidianas del poeta a\u00f1aden un toque absurdo y divertido a la composici\u00f3n.\"\n}",
         "role": "assistant",
         "function_call": null,
         "tool_calls": null
       }
     }
   ],
-  "created": 1719128471,
+  "created": 1719159020,
   "model": "gpt-3.5-turbo-0125",
   "object": "chat.completion",
   "system_fingerprint": null,
   "usage": {
-    "completion_tokens": 61,
-    "prompt_tokens": 250,
-    "total_tokens": 311
+    "completion_tokens": 748,
+    "prompt_tokens": 262,
+    "total_tokens": 1010
   }
 }
