--- a/outputs/model_responses/gpt/gpt-35-turbo/humor_0001_gpt-35-turbo.json
+++ b/outputs/model_responses/gpt/gpt-35-turbo/humor_0001_gpt-35-turbo.json
@@ -1,4 +1,4 @@
 {
   "judgement": "sí",
-  "reason": "El poema es cómico porque juega con la mezcla de culturas y elementos chinos y occidentales de una manera absurda y exagerada, creando un tono humorístico."
+  "reason": "El poema es considerado cómico por la exageración de los nombres y términos chinos, así como por la combinación de elementos orientales con occidentales de una manera absurda y caricaturesca. La mezcla de términos relacionados con la elegancia y la alta sociedad con la cultura china crea un contraste humorístico. Además, el uso de rimas forzadas y la descripción de actividades mundanas como fumar pipa y leer periódicos añaden un tono humorístico al poema."
 }
