[tu] removes unneeded files

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *\(autre copie\)*
 *\(3e copie\)*
 *\(4e copie\)*
+oai_client_ans_hum.py
+myllr.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
