[tu] adds to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *\(4e copie\)*
 oai_client_ans_hum.py
 myllr.py
+outputs/output_ipython_gpt_queries.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
