[tu] adds to gitignore and removes unneeded file

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 oai_client_ans_hum.py
 myllr.py
 outputs/output_ipython_gpt_queries.txt
+src/oai_client_gen_poem.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
